<resources>
    <string name="app_name">SweetDream</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">电话号码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_phone">非法电话号码</string>
    <string name="error_invalid_password">密码过短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">输入不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing phone
        completions."
    </string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="tab_menu_mainpage">主页</string>
    <string name="tab_menu_data">数据</string>
    <string name="tab_menu_picture">图鉴</string>
    <string name="tab_menu_mine">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
